# MLTSA

./: .gitignore  .readthedocs.yaml  CHANGELOG.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  pyproject.toml  setup.py
.release_dist/: mltsa-0.1.0-py3-none-any.whl
MLTSA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
MLTSA_datasets/MD_DATA/: CV_from_MD.py  CV_from_dcd.py  testing_analysis.py
MLTSA_datasets/TwoD_pot/: TwoD_pot_data.py  feature_projector.py
MLTSA_examples/OneD_pot/: LSTM_OneD.py  OneD_MLP_example.ipynb  OneD_pot_data.py  OneD_sklearn_example.ipynb  testing_TF_architectures.ipynb
MLTSA_sklearn/: MLTSA_sk.py  models.py
MLTSA_tensorflow/: MLP_tf.py  MLTSA_tf.py  TF_2_LSTM.py  TF_2_MLP.py  TF_2_RNN.py  TF_old_MLP.py
docs/: requirements.txt
docs/source/: cli_usage.rst  conf.py  examples.rst  index.rst  overview.rst  (+12 more)
notebooks/: 01_synthetic_1d_data_generation_the_basics.ipynb  02_synthetic_2d_data_generation_added_complexity_through_ice_cream.ipynb  03_mltsa_for_dummies.ipynb  04_mltsa_on_real_data_placeholder.ipynb  05_exploring_models.ipynb  06_shap_compatible.ipynb  MD_data_analysis.ipynb  MLTSA_through_time.ipynb  OneD_MLTSA_sklearn_.ipynb  OneD_MLTSA_tensorflow.ipynb  OneD_sklearn_example.ipynb  README.md  example.ipynb  testing_TF_architectures.ipynb
paper/: README.txt
tests/: __init__.py  _md_fakes.py  conftest.py  test_explain_models.py  test_io_h5.py  test_md_analyze.py  test_md_featurize.py  test_md_label.py  test_smoke.py  test_synthetic_dataset.py  test_torch_models.py
tools/: generate_tutorial_notebooks.py
(+71 files in other folders)
