[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mltsa"
version = "0.1.0"
description = "Modern src-layout foundation for Machine Learning Transition State Analysis."
readme = "README.rst"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Pedro Buigues", email = "pedrojuanbj@gmail.com" },
]
keywords = ["machine learning", "transition state analysis", "molecular dynamics"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Typing :: Typed",
]
dependencies = [
  "h5py>=3.10",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "torch>=2.11",
]

[project.optional-dependencies]
test = ["pytest>=8,<10"]

[project.scripts]
mltsa = "mltsa.cli:main"

[project.urls]
Documentation = "https://mltsa.readthedocs.io/en/latest/"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true
license-files = ["LICENSE.txt"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mltsa = ["py.typed"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
